--- a/KW2309MAUI/MainPage.xaml
+++ b/KW2309MAUI/MainPage.xaml
@@ -6,30 +6,45 @@
     <ScrollView>
         <VerticalStackLayout
             Padding="30,0"
-            Spacing="25">
-            <Image
-                Source="dotnet_bot.png"
-                HeightRequest="185"
-                Aspect="AspectFit"
-                SemanticProperties.Description="dot net bot in a race car number eight" />
-
+            Spacing="25"
+            BackgroundColor="Beige">
             <Label
-                Text="Hello, World!"
-                Style="{StaticResource Headline}"
-                SemanticProperties.HeadingLevel="Level1" />
-
-            <Label
-                Text="Welcome to &#10;.NET Multi-platform App UI"
-                Style="{StaticResource SubHeadline}"
-                SemanticProperties.HeadingLevel="Level2"
-                SemanticProperties.Description="Welcome to dot net Multi platform App U I" />
-
+                Text="Gra w kości. Autor:00000000000"
+             BackgroundColor ="Brown"
+                TextColor="White"
+                FontSize="Title"
+                Padding="10"/>
             <Button
-                x:Name="CounterBtn"
-                Text="Click me" 
-                SemanticProperties.Hint="Counts the number of times you click"
-                Clicked="OnCounterClicked"
-                HorizontalOptions="Fill" />
+                Text="RZUĆ KOŚĆMI"/>
+            <FlexLayout
+                Direction="Row">
+                <Image
+                    FlexLayout.Basis="20%"
+                    Source="k6_0.png"/>
+                <Image
+                    FlexLayout.Basis="20%"
+                    Source="k6_0.png"/>
+                <Image
+                    FlexLayout.Basis="20%"
+                    Source="k6_0.png"/>
+                <Image
+                    FlexLayout.Basis="20%"
+                    Source="k6_0.png"/>
+                <Image
+                    FlexLayout.Basis="20%"
+                    Source="k6_0.png"/>
+                <Image
+                    FlexLayout.Basis="20%"
+                    Source="k6_0.png"/>
+            </FlexLayout>
+            <Label
+                Text="Wynik tego losowania: 0"/>
+            <Label
+                Text="Wynik gry: 0"/>
+            <Button
+                Text="RESETUJ WYNIK"/>
+            
+
         </VerticalStackLayout>
     </ScrollView>
 
